# utility-scripts

./: .env.template  .gitignore  README.md  aqi.py  bash_sensor.sh  docker-pytest-cleanup.sh  install.sh  k9s-update.py  parse_backup_progress.py  pause.sh  pyproject.toml  reverse_ssh_tunnel.sh  rsync_backup.py  rsync_backup.sh  shared.sh  show_metered_connection_status.py  switch_bt_headphones.sh  toggl_time_tracked.py  toggle_turbo_boost.sh  vpn_autoconnect.py
etc/polkit-1/rules.d/: 50-org.freedesktop.NetworkManager.rules
etc/systemd/system/: vpn_autoconnect.service
rsync_timeshift/: .env.template  rsync_timeshift.sh
shared/: constants.py  metered_connection_status.py  notify.py
