[tool.poetry]
name = "utility-scripts"
version = "0.1.0"
description = "Command line utility scripts"
authors = ["Radek Lat <radek.lat@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "utility_scripts"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = {extras = ["dotenv"], version = "^2.0"}
requests = "^2.28.2"
delfino-core = {extras = ["dependencies-update", "pyupgrade"], version = "^7.2.4"}
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^23.3.0"}
delfino-core = {extras = ["dependencies-update", "pyupgrade"], version = "^7.2.4"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
# Setting compatible with black. See https://black.readthedocs.io/en/stable/compatible_configs.html
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line-length = 120
target-version = ['py312']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.delfino.plugins.delfino-core]
enable_commands = ["gh", "switch-python-version", "dependencies-update", "pyupgrade"]